[package]
name = "sm64-seam-tool"
version = "0.1.0"
edition = "2018"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
winit = "0.22.1"
imgui = "0.4.0"
futures = "0.3.5"
imgui-winit-support = "0.4.0"
bytemuck = "1.4.0"
read-process-memory = "0.1.2"
nalgebra = "0.22.0"
itertools = "0.9.0"
rayon = "1.4.0"
ordered-float = "2.0.0"
sysinfo = "0.15.1"
lazy_static = "1.4.0"
parse_int = "0.4.0"
serde = { version = "1.0.115", features = ["derive"] }
json5 = "0.2.8"
log = "0.4.11"
log-panics = "2.0.0"
simple-logging = "2.0.2"

[build-dependencies]
walkdir = "2.3.1"

[profile.release]
debug = true
