[package]
name = "sm64-seam-tool"
version = "0.1.1"
edition = "2024"
resolver = "2"

[dependencies]
wgpu = { version = "22.0.1", features = ["spirv"] }
winit = { version = "0.29.15", features=["rwh_05"]}
imgui = "0.12"
futures = "0.3.27"
imgui-winit-support = "0.12"
bytemuck = "1"
read-process-memory = "0.1"
nalgebra = "0.33"
itertools = "0.13.0"
rayon = "1"
sysinfo = "0.33"
parse_int = "0.6"
serde = { version = "1", features = ["derive"] }
json5 = "0.4.1"
log = "0.4"
log-panics = "2"
simple-logging = "2"

[build-dependencies]
walkdir = "2"

[profile.release]
debug = true
